--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,9 @@ AllCops:
    - 'db/seeds.rb'
    - 'db/schema.rb'
    - 'vendor/bundle/**/*'
+
+  Style/HashSyntax:
+    UseHashRocketsWithSymbolValues: true
+    
+  Metrics/LineLength:
+    Max: 120
